# imaputil

./: ImtestImap.pm  LICENSE  Makefile.in  README.md  configure.in  imap-append.1  imap-append.in  imap-du.1  imap-du.in  imap-from.1  imap-from.in  imap-msgchk.1  imap-msgchk.in  imap-quota.1  imap-quota.in
